// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.example.shoppingcart;

option java_outer_classname = "ShoppingCartController";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "com/example/shoppingcart/shoppingcart_api.proto";

message NewCart {
}

message NewCartCreated {
  string cart_id = 1;
}

service ShoppingCartAction {
  option (kalix.service) = {
    type : SERVICE_TYPE_ACTION
  };

  rpc InitializeCart(NewCart) returns (NewCartCreated);
  rpc VerifiedAddItem(com.example.shoppingcart.AddLineItem) returns (google.protobuf.Empty);
  rpc CreatePrePopulated(NewCart) returns (NewCartCreated);
  rpc UnsafeValidation(com.example.shoppingcart.AddLineItem) returns (google.protobuf.Empty);
}